# brewery-controller

./: README.md  brewery-controller.code-workspace
brewery-controller-common/: Cargo.toml
brewery-controller-common/src/: circular_buffer.rs  common.rs  ht16k33.rs  lib.rs  max31865.rs  mcp23008.rs  pid.rs  rotary_encoder.rs  seven_segment_display.rs  solid_state_relay.rs  temperature_stats.rs
brewery-controller-common/src/mocks/: mock_i2c.rs  mock_spi.rs  mock_time.rs  mod.rs
brewery-controller-esp32c3/: Cargo.toml  partitions.csv
brewery-controller-esp32c3/.cargo/: config.toml
brewery-controller-esp32c3/src/: index.html  main.rs  server.rs
