[package]
name = "brewery-controller-esp32c3"
version = "0.0.0"
authors = ["Anna"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = { version = "1.1.1" }
embedded-hal = { version = "=1.0.0-alpha.9" }
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal", features = ["eh1"] }
esp-backtrace = { version = "0.4.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.3.1", default-features = false, features = ["esp32c3", "uart"] }
log = { version = "0.4.17", default-features = false }
shared-bus = { version = "0.2.5", features = ["eh-alpha"] }
riscv = { version = "0.10.0" }
riscv-rt = { version = "0.10.0" }

brewery-controller-common = { path = "../brewery-controller-common" }